--- a/simd.html
+++ b/simd.html
@@ -8,7 +8,7 @@
         
         <script src="js/jquery-3.2.1.js"></script>
         <script src="simd.js"></script>
-        <link href="main.css" rel="stylesheet">
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <script src="js/bootstrap.min.js"></script>
     </head>
@@ -28,6 +28,10 @@
                 <div class="form-group">
                     <label for="input_q">q =</label>
                     <input type="number" min = "1" step = "1" class="form-control" id="input_q">
+                </div>
+                <div class="form-group">
+                    <label for="input_n">n =</label>
+                    <input type="number" min = "1" step = "1" class="form-control" id="input_n">
                 </div>
             </form>
 
@@ -57,9 +61,13 @@
             <button type="button" class="btn btn-default" OnClick="process();">
                 Рассчитать
             </button>
+            <button type="button" class="btn btn-default" OnClick="drawCharts();">
+                Построить графики
+            </button>
             
             <h4>
-                <div id="time"><b></b></div>
+                <div id="time_1"><b></b></div>
+                <div id="time_n"><b></b></div>
             </h4>
             <div class="container">
                 <table id="tableA" class="table table-striped table-hover table-condensed table-bordered text-center">
@@ -69,6 +77,11 @@
                 <table id="tableC" class="table table-striped table-hover table-condensed table-bordered text-center">
                 </table>
             </div>
+
+            <div id="chart_Ky_n"></div>
+            <div id="chart_Ky_r"></div>
+            <div id="chart_e_n"></div>
+            <div id="chart_e_r"></div>
         </div>
     </body>
 
