New divergence, old parallel time

--- a/simd.html
+++ b/simd.html
@@ -82,6 +82,8 @@
             <div id="chart_Ky_r"></div>
             <div id="chart_e_n"></div>
             <div id="chart_e_r"></div>
+            <div id="chart_D_n"></div>
+            <div id="chart_D_r"></div>
         </div>
     </body>
 
