Refactor code, draw charts based on one data set

--- a/simd.html
+++ b/simd.html
@@ -57,6 +57,12 @@
                     <input type="number" min = "1" step = "1" class="form-control" id="input_t5" placeholder="Сравнение">
                 </div>
             </form>
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="input_chart_range">Диапазон графиков = </label>
+                    <input type="number" min = "1" step = "1" class="form-control" id="input_chart_range">
+                </div>
+            </form>
 
             <button type="button" class="btn btn-default" OnClick="process();">
                 Рассчитать
