Further refactor charts drawing

--- a/simd.html
+++ b/simd.html
@@ -84,6 +84,7 @@
                 </table>
             </div>
 
+            <script>google.charts.load('current', {'packages':['line']});</script>
             <div id="chart_Ky_n"></div>
             <div id="chart_Ky_r"></div>
             <div id="chart_e_n"></div>
