--- a/simd.html
+++ b/simd.html
@@ -11,6 +11,13 @@
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <script src="js/bootstrap.min.js"></script>
+
+        <style>
+            input[type=number]{
+                margin-bottom: 10px;
+                margin-right: 10px;
+            }
+        </style>
     </head>
 
     <body>
@@ -38,29 +45,33 @@
             <form class="form-inline">
                 <div class="form-group">
                     <label for="input_t1">t1 =</label>
-                    <input type="number" min = "1" step = "1" class="form-control" id="input_t1" placeholder="Сложение">
+                    <input type="number" min = "1" step = "1" value = "1" class="form-control" id="input_t1" placeholder="Сложение">
                 </div>
                 <div class="form-group">
                     <label for="input_t2">t2 =</label>
-                    <input type="number" min = "1" step = "1" class="form-control" id="input_t2" placeholder="Вычитание">
+                    <input type="number" min = "1" step = "1" value = "1" class="form-control" id="input_t2" placeholder="Вычитание">
                 </div>
                 <div class="form-group">
                     <label for="input_t3">t3 =</label>
-                    <input type="number" min = "1" step = "1" class="form-control" id="input_t3" placeholder="Умножение">
+                    <input type="number" min = "1" step = "1" value = "1" class="form-control" id="input_t3" placeholder="Умножение">
                 </div>
                 <div class="form-group">
                     <label for="input_t4">t4 =</label>
-                    <input type="number" min = "1" step = "1" class="form-control" id="input_t4" placeholder="Взятие модуля">
+                    <input type="number" min = "1" step = "1" value = "1" class="form-control" id="input_t4" placeholder="Взятие модуля">
                 </div>
                 <div class="form-group">
                     <label for="input_t5">t5 =</label>
-                    <input type="number" min = "1" step = "1" class="form-control" id="input_t5" placeholder="Сравнение">
+                    <input type="number" min = "1" step = "1" value = "1" class="form-control" id="input_t5" placeholder="Сравнение">
                 </div>
             </form>
             <form class="form-inline">
                 <div class="form-group">
                     <label for="input_chart_range">Диапазон графиков = </label>
-                    <input type="number" min = "1" step = "1" class="form-control" id="input_chart_range">
+                    <input type="number" min = "1" step = "1" value = "20" class="form-control" id="input_chart_range">
+                </div>
+                <div class="form-group">
+                    <label for="input_chart_amount">Количество графиков = </label>
+                    <input type="number" min = "1" step = "1" value = "10" class="form-control" id="input_chart_amount">
                 </div>
             </form>
 
